# app_aw

./: .env.example  .gitignore  AUTH_GUIDE.md  CLOUD_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  data.py  health.py  jobs.py  websockets.py  workflows.py
backend/app/core/: aw_wrapper.py  database.py  security.py  task_queue.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  auth.py  database.py  schemas.py
backend/app/services/: storage_facade.py  storage_service.py  user_service.py  workflow_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_jobs.py
docker/: docker-compose.yml
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApprovalModal.tsx  Dashboard.tsx  DataList.tsx  DataUpload.tsx  EmptyState.tsx  ExecutionMonitor.tsx  JobHistory.tsx  Loading.tsx  Login.tsx  Onboarding.tsx  Register.tsx  ResultViewer.tsx  Toast.tsx  WorkflowBuilder.tsx  WorkflowImportExport.tsx  WorkflowList.tsx  WorkflowScheduler.tsx  WorkflowTemplates.tsx
frontend/src/contexts/: AuthContext.tsx
scripts/: dev.sh  setup.sh
tests/e2e/: .gitignore  README.md  package.json  playwright.config.ts
(+14 files in other folders)
